--- a/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021.csproj
+++ b/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021.csproj
@@ -13,6 +13,9 @@
     <None Update="Day1\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day2\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
