--- a/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021.csproj
+++ b/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021.csproj
@@ -6,10 +6,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="morelinq" Version="3.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Sjerrul.AdventOfCode2021.Tools\Sjerrul.AdventOfCode2021.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Day15\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Day14\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Day1\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
