--- a/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021.csproj
+++ b/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021/Sjerrul.AdventOfCode2021.csproj
@@ -15,7 +15,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Day13\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Day12\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Day21\Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Day16\Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Day15\Input.txt">
